src/pages/globals.scss
:root {
  --background: #dad7cd;
}

* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
  color: var(--dynamic-text-color, #f1f1f1);
}

body {
  background: linear-gradient(270deg, #4c3e4a 26.56%, #575469 100%);
  color: var(--dynamic-text-color, #f1f1f1);
}

// 404 Error SVG Animations
svg#freepik_stories-404-error {
  &:not(.animated) .animable {
    opacity: 0;
  }

  &.animated {
    #freepik--background-complete--inject-11 {
      animation: 1s 1 forwards cubic-bezier(0.36, -0.01, 0.5, 1.38) slideRight;
      animation-delay: 0s;
    }

    #freepik--404--inject-11 {
      animation: 1s 1 forwards cubic-bezier(0.36, -0.01, 0.5, 1.38) zoomIn;
      animation-delay: 0s;
    }

    #freepik--Planets--inject-11 {
      animation: 1s 1 forwards cubic-bezier(0.36, -0.01, 0.5, 1.38) slideRight;
      animation-delay: 0s;
    }

    #freepik--Astronaut--inject-11 {
      animation: 1s 1 forwards cubic-bezier(0.36, -0.01, 0.5, 1.38) slideLeft;
      animation-delay: 0s;
    }

    #freepik--Rocket--inject-11 {
      animation: 1s 1 forwards cubic-bezier(0.36, -0.01, 0.5, 1.38) lightSpeedLeft;
      animation-delay: 0s;
    }
  }
}

// Computer Troubleshooting SVG Animations
svg#freepik_stories-computer-troubleshooting {
  &:not(.animated) .animable {
    opacity: 0;
  }

  &.animated {
    #freepik--background-complete--inject-2 {
      animation: 1s 1 forwards cubic-bezier(0.36, -0.01, 0.5, 1.38) fadeIn;
      animation-delay: 0s;
    }

    #freepik--Shadow--inject-2 {
      animation: 1s 1 forwards cubic-bezier(0.36, -0.01, 0.5, 1.38) lightSpeedLeft;
      animation-delay: 0s;
    }

    #freepik--speech-bubble--inject-2 {
      animation: 1s 1 forwards cubic-bezier(0.36, -0.01, 0.5, 1.38) slideRight;
      animation-delay: 0s;
    }

    #freepik--Character--inject-2 {
      animation: 1s 1 forwards cubic-bezier(0.36, -0.01, 0.5, 1.38) zoomOut;
      animation-delay: 0s;
    }

    #freepik--Device--inject-2 {
      animation: 1s 1 forwards cubic-bezier(0.36, -0.01, 0.5, 1.38) fadeIn;
      animation-delay: 0s;
    }

    #freepik--tool-box--inject-2 {
      animation: 1s 1 forwards cubic-bezier(0.36, -0.01, 0.5, 1.38) slideLeft;
      animation-delay: 0s;
    }
  }
}

// Internet On The Go SVG Animations
svg#freepik_stories-internet-on-the-go {
  &:not(.animated) .animable {
    opacity: 0;
  }

  &.animated {
    #freepik--background-simple--inject-3 {
      animation: 1s 1 forwards cubic-bezier(0.36, -0.01, 0.5, 1.38) zoomOut;
      animation-delay: 0s;
    }

    #freepik--Icon--inject-3 {
      animation: 1s 1 forwards cubic-bezier(0.36, -0.01, 0.5, 1.38) slideRight;
      animation-delay: 0s;
    }

    #freepik--Character--inject-3 {
      animation: 1s 1 forwards cubic-bezier(0.36, -0.01, 0.5, 1.38) lightSpeedRight;
      animation-delay: 0s;
    }
  }
}

// View Transition API
::view-transition-old(certificate-zoom):only-child,
::view-transition-new(certificate-zoom):only-child {
  animation: zoomIn 0.5s ease-in-out forwards;
}

// Animations
@keyframes slideRight {
  0% {
    opacity: 0;
    transform: translateX(30px);
  }
  100% {
    opacity: 1;
    transform: translateX(0);
  }
}

@keyframes zoomIn {
  0% {
    opacity: 0;
    transform: scale(0.5);
  }
  100% {
    opacity: 1;
    transform: scale(1);
  }
}

@keyframes slideLeft {
  0% {
    opacity: 0;
    transform: translateX(-30px);
  }
  100% {
    opacity: 1;
    transform: translateX(0);
  }
}

@keyframes lightSpeedLeft {
  from {
    transform: translate3d(-50%, 0, 0) skewX(20deg);
    opacity: 0;
  }
  60% {
    transform: skewX(-10deg);
    opacity: 1;
  }
  80% {
    transform: skewX(2deg);
  }
  to {
    opacity: 1;
    transform: translate3d(0, 0, 0);
  }
}

@keyframes fadeIn {
  0% {
    opacity: 0;
  }
  100% {
    opacity: 1;
  }
}

@keyframes zoomOut {
  0% {
    opacity: 0;
    transform: scale(1.5);
  }
  100% {
    opacity: 1;
    transform: scale(1);
  }
}

@keyframes lightSpeedRight {
  from {
    transform: translate3d(50%, 0, 0) skewX(-20deg);
    opacity: 0;
  }
  60% {
    transform: skewX(10deg);
    opacity: 1;
  }
  80% {
    transform: skewX(-2deg);
  }
  to {
    opacity: 1;
    transform: translate3d(0, 0, 0);
  }
}

